feature : update new Version

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,8 @@ set(SOURCES
     kid.cpp
     loadimage.cpp
     player.cpp
+    application.cpp
 )
-add_library(CROSSING_GUARD_JOE_LIB STATIC ${SOURCES})
+add_library(CROSSING_GUARD_JOE_LIB STATIC ${SOURCES} )
 
 target_include_directories(CROSSING_GUARD_JOE_LIB PUBLIC ${CMAKE_SOURCE_DIR}/include)
